@@ -1,5 +1,9 @@
 2008-12-15  Hans-Peter Nilsson  <hp@axis.com>
 
+	* ld-cris/hidedsofns2468, ld-cris/libdso-12b.d,
+	ld-cris/libdso-12c.d, ld-cris/libdso-1b.d, ld-cris/dso-1b.s: New
+	tests.
+
 	* ld-cris/got7.s: Correct .size expression.
 	* ld-cris/tls-e-20a.d: Adjust accordingly.
 
